--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="configurator-img" style="z-index: 1000;">
                     <h5>Wymiar i cena prezentowanego<br> zestawu:</h5>
                     <span id="price" class="blue-text configurator-price"></span>
-                    <p id="price-vat" hidden>Cena zawiera podatek VAT 23%</p>
+                    <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
                 </div>
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
             </div>
@@ -35,8 +35,8 @@
         <div class="col-md-6">
             <div class="row margin-bottom-25">
                 <div class="text-center">
-                    <h5 id="step-number" class="configurator-uppercase">Krok 1</h5>
-                    <p id="step-title" class="blue-text configurator-uppercase bold"></p>
+                    <p id="step-number" class="configurator-uppercase">Krok 1</p>
+                    <p id="step-title" class="blue-text configurator-uppercase"></p>
                     <button id="skip-step" type="button" class="btn btn-link" onclick="configurator.skipStep()">Pomiń ten krok>></button>
                 </div>
             </div>
