--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
     <script src="configurator.js"></script>
 </head>
 <body>
-<section class="container margin-top-180 margin-bottom-75 show-section configurator">
+<section class="margin-top-180 margin-bottom-75 show-section configurator">
     <div class="row">
-        <div class="col-md-6 configurator-left">
+        <div class="col-md-6 col-sm-12 configurator-left">
             <div id="configurator-preview" class="wrapper">
                 <div class="configurator-img" style="z-index: 1000;">
-                    <h5>Wymiar i cena prezentowanego<br> zestawu:</h5>
-                    <span id="price" class="blue-text configurator-price"></span>
-                    <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
+                    <div class="price-info">
+                        <h5>Wymiar i cena prezentowanego<br> zestawu:</h5>
+                        <span id="price" class="blue-text configurator-price"></span>
+                        <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
+                    </div>
                 </div>
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12">
             <div class="row margin-bottom-25">
                 <div class="text-center">
                     <p id="step-number" class="configurator-uppercase">Krok 1</p>
