--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="configurator.js"></script>
 </head>
 <body>
-<section class="margin-top-180 margin-bottom-75 show-section configurator">
+<section class="margin-top-75 margin-bottom-75 show-section configurator">
     <div class="row">
         <div class="col-md-6 col-sm-12 configurator-left">
             <div id="configurator-preview" class="wrapper">
@@ -52,7 +52,7 @@
                     <button id="previous-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.previousStep()">wezgłowie </button>
                 </div>
                 <div class="col-sm-6">
-                    <button id="next-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.start('step_2')"></button>
+                    <button id="next-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.loadLevel('step_2')"></button>
                 </div>
             </div>
         </div>
