--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="configurator.js"></script>
 </head>
 <body>
-<section class="margin-top-75 margin-bottom-75 show-section configurator">
+<section class="container-fluid margin-top-75 margin-bottom-75 show-section configurator">
     <div class="row">
         <div class="col-md-6 col-sm-12 configurator-left">
             <div id="configurator-preview" class="wrapper">
