--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <button id="previous-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.previousStep()">wezgłowie </button>
                 </div>
                 <div class="col-sm-6">
-                    <button id="next-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.loadLevel('step_2')"></button>
+                    <button id="next-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.nextStep()"></button>
                 </div>
             </div>
         </div>
