--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 </head>
 <body>
 <section class="container-fluid margin-top-10 margin-bottom-75 show-section configurator">
-    <div class="row">
+    <div class="row" id="configurator-start-view">
+        <img class="img-responsive" src="img/konfigurator_start.png" alt="konfigurator start"/>
+        <button class="btn btn-star center-block" onclick="configurator.start()">START KONFIGURACJI</button>
+    </div>
+    <div class="row" id="configurator" hidden>
         <div class="col-md-6 col-sm-12 configurator-left">
             <div id="configurator-preview" class="wrapper">
                 <div class="configurator-img" style="z-index: 1000;">
