--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <section class="container-fluid margin-top-25 margin-bottom-75 show-section configurator">
     <div class="row" id="configurator-start-view">
-        <img class="img-responsive" src="img/konfigurator_start.png" alt="konfigurator start"/>
+        <img class="img-responsive" src="img/konfigurator_start.jpg" alt="konfigurator start"/>
         <button class="btn btn-star center-block" onclick="configurator.start()">START KONFIGURACJI</button>
     </div>
     <div class="row" id="configurator" hidden>
