--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <section class="container-fluid margin-top-25 margin-bottom-75 show-section configurator">
     <div class="row" id="configurator-start-view">
         <img class="img-responsive" src="img/konfigurator_start.jpg" alt="konfigurator start"/>
+        <h3 class="configurator-start-text text-center">Stwórz swoje własne łóżko</h3>
         <button class="btn btn-star center-block" onclick="configurator.start()">START KONFIGURACJI</button>
     </div>
     <div class="row" id="configurator" hidden>
