bedhead changing render on change height

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             </div>
             <div class="row" style="padding-top: 25px">
                 <div class="col-sm-6">
-                    <button id="previous-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.previousStep()">wezgłowie </button>
+                    <button id="previous-step" type="button" class="btn btn-sm btn-link blue-text bold configurator-uppercase" onclick="configurator.previousStep()">wezgłowie </button>
                 </div>
                 <div class="col-sm-6">
-                    <button id="next-step" type="button" class="btn btn-link blue-text bold configurator-uppercase" onclick="configurator.nextStep()"></button>
+                    <button id="next-step" type="button" class="btn btn-sm btn-link blue-text bold configurator-uppercase" onclick="configurator.nextStep()"></button>
                 </div>
             </div>
         </div>
