--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
+                <!--<img id="base-img2" class="img-responsive configurator-img" style="z-index: 500" src="renders/wezglowia/łatka_riviera38 2.png" alt="Glamour"/>-->
             </div>
         </div>
         <div class="col-md-6 col-sm-12">
