--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
     <div class="row" id="configurator" hidden>
         <div class="col-md-6 col-sm-12 configurator-left">
             <div id="configurator-preview" class="wrapper">
+
+                <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
+                <!--<img id="base-img2" class="img-responsive configurator-img" style="z-index: 500" src="renders/wezglowia/łatka_riviera38 2.png" alt="Glamour"/>-->
                 <div class="configurator-img" style="z-index: 1000;">
                     <div class="price-info">
                         <h5>Wymiar i cena prezentowanego<br> zestawu:</h5>
                         <span id="price" class="blue-text configurator-price"></span>
                         <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
                     </div>
+                    <div class="example-visualization-info">
+                        <!--Przykładowa wizualizacja przedstawia model o wymiarach 160 x 200 cm i jest poglądowa. Prezentowane kolory tkanin mogą odbiegać od kolorów rzeczywistych. Konfigurator nie prezentuje wszystkich modeli materaców i akcesoriów.-->
+                    </div>
                 </div>
-                <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
-                <!--<img id="base-img2" class="img-responsive configurator-img" style="z-index: 500" src="renders/wezglowia/łatka_riviera38 2.png" alt="Glamour"/>-->
+
             </div>
         </div>
         <div class="col-md-6 col-sm-12">
