Added making summary pdf

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://hilding.pl/viewHilding/js/owl.carousel.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.54/pdfmake.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.54/vfs_fonts.js"></script>
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous" media="none" onload="if(media!='screen')media='screen'">
     <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/style.css?ver=1" >
@@ -30,7 +34,7 @@
         </div>
     </div>
     <div class="row" id="configurator" hidden>
-        <div class="col-md-6 col-sm-12 configurator-left">
+        <div class="col-md-6 col-sm-6 configurator-left">
             <div id="configurator-preview" class="wrapper">
 
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
@@ -48,7 +52,7 @@
 
             </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-6">
             <div class="row margin-bottom-25">
                 <div class="text-center">
                     <p id="step-number" class="configurator-uppercase">Krok 1</p>
