Skip step change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="text-center">
                     <p id="step-number" class="configurator-uppercase">Krok 1</p>
                     <p id="step-title" class="blue-text configurator-uppercase"></p>
-                    <button id="skip-step" type="button" class="btn btn-link" onclick="configurator.skipStep()">Pomiń ten krok></button>
+                    <!--<button id="skip-step" type="button" class="btn btn-link" onclick="configurator.skipStep()">Pomiń ten krok></button>-->
                 </div>
             </div>
             <div class="row">
