Styled table pdf

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://dagrejs.github.io/project/graphlib/latest/graphlib.js"></script>
     <script src="configurator.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
 </head>
 <body>
 <section class="container-fluid margin-top-25 margin-bottom-75 show-section configurator">
