--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     <div class="row" id="configurator" hidden>
         <div class="col-md-6 col-sm-6 configurator-left">
             <div id="configurator-preview" class="wrapper">
-
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
                 <!--<img id="base-img2" class="img-responsive configurator-img" style="z-index: 500" src="renders/wezglowia/łatka_riviera38 2.png" alt="Glamour"/>-->
                 <div class="configurator-img" style="z-index: 1000;">
@@ -48,10 +47,10 @@
                         <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
                     </div>
                     <div class="example-visualization-info">
-                        <!--Przykładowa wizualizacja przedstawia model o wymiarach 160 x 200 cm i jest poglądowa. Prezentowane kolory tkanin mogą odbiegać od kolorów rzeczywistych. Konfigurator nie prezentuje wszystkich modeli materaców i akcesoriów.-->
+                        Przykładowa wizualizacja przedstawia model o wymiarach 160 x 200 cm i jest poglądowa.<br/>
+                        Prezentowane kolory tkanin mogą odbiegać od kolorów rzeczywistych. Konfigurator nie prezentuje wszystkich modeli materaców i akcesoriów.
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="col-md-6 col-sm-6">
