--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="row" id="configurator" hidden>
-        <div class="col-md-6 col-sm-6 configurator-left">
+        <div class="col-md-6 col-sm-6 col-xs-6 configurator-left">
             <div id="configurator-preview" class="wrapper">
                 <img id="base-img" class="img-responsive configurator-img" src="renders/tlo001.jpg" alt="Glamour"/>
                 <!--<img id="base-img2" class="img-responsive configurator-img" style="z-index: 500" src="renders/wezglowia/łatka_riviera38 2.png" alt="Glamour"/>-->
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6">
+        <div class="col-md-6 col-sm-6 col-xs-6 ">
             <div class="row margin-bottom-25">
                 <div class="text-center">
                     <p id="step-number" class="configurator-uppercase">Krok 1</p>
