--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="col-sm-6">
                     <button id="previous-step" type="button" class="btn btn-sm btn-link blue-text bold configurator-uppercase" onclick="configurator.previousStep()">wezgłowie </button>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6" style="text-align: right;">
                     <button id="next-step" type="button" class="btn btn-sm btn-link blue-text bold configurator-uppercase" onclick="configurator.nextStep()"></button>
                 </div>
             </div>
