--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
                         <span id="price" class="blue-text configurator-price"></span>
                         <p id="price-vat" hidden>Cena zawiera podatek VAT 23 %</p>
                     </div>
-                    <div class="example-visualization-info">
-                        Przykładowa wizualizacja przedstawia model o wymiarach 160 x 200 cm i jest poglądowa.<br/>
-                        Prezentowane kolory tkanin mogą odbiegać od kolorów rzeczywistych. Konfigurator nie prezentuje wszystkich modeli materaców i akcesoriów.
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -76,6 +73,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="example-visualization-info">
     </div>
     <div id="circle"></div>
 </section>
