--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
             <div class="row">
                 <div id="step-content" class="col-sm-12">
 
-
                 </div>
             </div>
             <div class="row" style="padding-top: 25px">
@@ -73,6 +72,9 @@
                 <div class="col-sm-6" style="text-align: right;">
                     <button id="next-step" type="button" class="btn btn-sm btn-link blue-text bold configurator-uppercase" onclick="configurator.nextStep()"></button>
                 </div>
+            </div>
+            <div class="row" style="text-align: center;">
+                <button id="reload" class="btn btn-sm btn-link blue-text" onclick="configurator.repeat()"><span class="glyphicon glyphicon-repeat"></span> Zacznij ponownie</button>
             </div>
         </div>
     </div>
