--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.54/vfs_fonts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous" ></script>
-
+    <script src="https://hilding.pl/viewHilding/js/svg-icons.js"></script>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous" media="none" onload="if(media!='screen')media='screen'">
-    <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/style.css?ver=1" >
+    <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/style.css?ver=0.0.1" >
     <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/lightbox.css" media="none" onload="if(media!='screen')media='screen'">
     <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/owl.theme.css" media="none" onload="if(media!='screen')media='screen'">
     <link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/owl.carousel.css"  media="none" onload="if(media!='screen')media='screen'">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
-
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://dagrejs.github.io/project/graphlib/latest/graphlib.js"></script>
