--- a/Certyfikaty _ Materace Hilding.html
+++ b/Certyfikaty _ Materace Hilding.html
@@ -26,14 +26,14 @@
 <link rel="shortcut icon" href="https://hilding.pl/viewHilding/img/favicon.png">
 
 <link rel="stylesheet" href="./Certyfikaty _ Materace Hilding_files/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link rel="stylesheet" href="./Certyfikaty _ Materace Hilding_files/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous" media="screen" onload="if(media!=&#39;screen&#39;)media=&#39;screen&#39;">
-<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/owl.carousel.css" media="screen" onload="if(media!=&#39;screen&#39;)media=&#39;screen&#39;">
-<link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/owl.theme.css" media="screen" onload="if(media!=&#39;screen&#39;)media=&#39;screen&#39;">
+<link rel="stylesheet" href="./Certyfikaty _ Materace Hilding_files/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous" media="screen" onload="if(media!=&#39;screen&;#39;)media=;&#39;screen&;#39;">
+<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/owl.carousel.css" media="screen" onload="if(media!=&#39;screen&;#39;)media=;&#39;screen&;#39;">
+<link rel="stylesheet" type="text/css" href="https://hilding.pl/viewHilding/css/owl.theme.css" media="screen" onload="if(media!=&#39;screen&;#39;)media=;&#39;screen&;#39;">
 
-<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/jquery.mCustomScrollbar.min.css" media="screen" onload="if(media!=&#39;screen&#39;)media=&#39;screen&#39;">
+<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/jquery.mCustomScrollbar.min.css" media="screen" onload="if(media!=&#39;screen&;#39;)media=;&#39;screen&;#39;">
 
 <link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/style.css">
-<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/lightbox.css" media="screen" onload="if(media!=&#39;screen&#39;)media=&#39;screen&#39;">
+<link rel="stylesheet" type="text/css" href="./Certyfikaty _ Materace Hilding_files/lightbox.css" media="screen" onload="if(media!=&#39;screen&;#39;)media=;&#39;screen&;#39;">
 
         <link rel="canonical" href="https://hilding.pl/certyfikaty.html">
         
@@ -1018,7 +1018,15 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
             <a href="https://www.youtube.com/channel/UCiswXPbbUAq92cX3Lcma-sw" target="_blank" class="hidden-md hidden-sm hidden-xs">
                 <div class="svg youtube-ico" data-svgicon="youtube-ico"><svg width="28" height="28" viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M14 .5C21.456.5 27.5 6.544 27.5 14S21.456 27.5 14 27.5.5 21.456.5 14 6.544.5 14 .5z" stroke="#9E9E9E"></path><path d="M16.452 14.336l-3.965 1.89c-.106.052-.228-.025-.228-.142v-3.9c0-.12.124-.196.23-.143l3.965 2.01c.118.06.116.23-.003.286M18.49 9h-8.48C8.35 9 7 10.348 7 12.01v4.24c0 1.662 1.348 3.01 3.01 3.01h8.48c1.662 0 3.01-1.348 3.01-3.01v-4.24C21.5 10.35 20.152 9 18.49 9" fill="#9E9E9E"></path></g></svg></div>
             </a>
-            <div><div class="svg search-ico hidden-md hidden-sm hidden-xs" data-svgicon="search-ico" onclick="$(&#39;#search-box&#39;).toggleClass(&#39;show&#39;); searchClick = true;"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M12.258 7.362c0 2.7-2.196 4.896-4.896 4.896-2.7 0-4.914-2.196-4.914-4.896 0-2.718 2.196-4.914 4.914-4.914 2.7 0 4.896 2.214 4.896 4.914zm1.17 4.158c.846-1.206 1.296-2.682 1.296-4.158C14.724 3.294 11.43 0 7.362 0S0 3.294 0 7.362s3.294 7.362 7.362 7.362c1.476 0 2.952-.468 4.176-1.296L16.11 18 18 16.11l-4.572-4.59z" fill="#9E9E9E" fill-rule="evenodd"></path></svg></div></div>
+            <div>
+                <div class="svg search-ico hidden-md hidden-sm hidden-xs" data-svgicon="search-ico"
+                     onclick="$(&;#39;#search-box&;#39;).toggleClass(&;#39;show&;#39;) searchClick = true;">
+                    <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.258 7.362c0 2.7-2.196 4.896-4.896 4.896-2.7 0-4.914-2.196-4.914-4.896 0-2.718 2.196-4.914 4.914-4.914 2.7 0 4.896 2.214 4.896 4.914zm1.17 4.158c.846-1.206 1.296-2.682 1.296-4.158C14.724 3.294 11.43 0 7.362 0S0 3.294 0 7.362s3.294 7.362 7.362 7.362c1.476 0 2.952-.468 4.176-1.296L16.11 18 18 16.11l-4.572-4.59z"
+                              fill="#9E9E9E" fill-rule="evenodd"></path>
+                    </svg>
+                </div>
+            </div>
             <script type="text/javascript">
                 $(document).on('click', '#search-box', function () {
                     searchClick = true;
@@ -1031,14 +1039,14 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                 });
             </script>
             <div id="burger_menu" class="svg burger-ico hidden-lg hidden-md" onclick="
-                $(&#39;body&#39;).toggleClass(&#39;hide-overflow&#39;);
-                $(this).toggleClass(&#39;close&#39;);
-                $(&#39;#burger_content&#39;).toggleClass(&#39;show&#39;);
+                $(&;#39;body&;#39;).toggleClass(&;#39;hide-overflow&;#39;)
+                $(this).toggleClass(&;#39;close&;#39;)
+                $(&;#39;#burger_content&;#39;).toggleClass(&;#39;show&;#39;)
                 "><span></span><span></span><span></span></div>
         </div>
     </div>
 </nav>
-<div id="arrow_to_top" class="hidden-xs hidden-sm" onclick="$(&#39;html, body&#39;).animate({ scrollTop: 0 }, 600);">
+<div id="arrow_to_top" class="hidden-xs hidden-sm" onclick="$(&;#39;html, body&;#39;).animate({ scrollTop: 0 }, 600);">
     <div class="svg" data-svgicon="arrow"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-198 322.5 197.4 197.4" style="enable-background:new -198 322.5 197.4 197.4;" xml:space="preserve"> <g> <g> <g> <g> <polygon class="st0" points="-147.7,514.9 -50.1,420.1 -147.7,325.4 -152.7,330.6 -60.5,420.1 -152.7,509.7 "></polygon> <path d="M-147.7,518.4l-8.5-8.8l92.1-89.5l-92.1-89.5l8.5-8.8l101.2,98.3L-147.7,518.4z M-149.2,509.7l1.6,1.6l93.9-91.2 l-93.9-91.2l-1.6,1.6l92.3,89.6L-149.2,509.7z"></path></g></g></g></g></svg></div>
 </div>
 <div id="compare">
@@ -1298,7 +1306,8 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                     }
                 }
             </script>
-            <form method="POST" action="https://hilding.pl/index/FormRequest" onsubmit="checkBoxError(&#39;form_accept&#39;); if(!$(this).valid() || !$(&#39;#form_accept&#39;).is(&#39;:checked&#39;)) { return false; }">
+            <form method="POST" action="https://hilding.pl/index/FormRequest"
+                  onsubmit="checkBoxError(&;#39;form_accept&;#39;) if(!$(this).valid() || !$(&#39;#form_accept&;#39;).is(&;#39;:checked&;#39;)) { return false; }">
                 <input type="hidden" name="fastContact" value="1">
                 <h4>Napisz wiadomość</h4>
                 <input name="email" type="text" class="main-input required" placeholder="E-mail">
@@ -1312,7 +1321,11 @@ function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config
                     </div>
                 </div>
                 <textarea name="description" class="main-textarea required" placeholder="Treść wiadomości..."></textarea>
-                <input type="checkbox" id="form_accept" class="css-checkbox" onclick="checkBoxError(&#39;form_accept&#39;);"><label style="margin: 10px 0px 30px; line-height: 1.4;" class="css-label" for="form_accept">Wyrażam zgodę na przetwarzanie danych osobowych zgodnie z <a href="https://hilding.pl/polityka-prywatnosci.html" target="_blank">polityką prywatności</a></label>
+                <input type="checkbox" id="form_accept" class="css-checkbox"
+                       onclick="checkBoxError(&;#39;form_accept&;#39;)"><label
+                    style="margin: 10px 0px 30px; line-height: 1.4;" class="css-label" for="form_accept">Wyrażam zgodę
+                na przetwarzanie danych osobowych zgodnie z <a href="https://hilding.pl/polityka-prywatnosci.html"
+                                                               target="_blank">polityką prywatności</a></label>
                 <button type="submit" class="blue-button" onclick="console.log($(this).valid());">Wyślij wiadomość</button>
 
             </form>
