--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
 </head>
 <body>
-<section class="container-fluid margin-top-25 margin-bottom-75 show-section configurator">
+<section class="container-fluid margin-bottom-75 show-section configurator">
     <div class="row" id="configurator-start-view">
         <img class="img-responsive" src="img/konfigurator_start.jpg" alt="konfigurator start"/>
         <div class="start-content">
@@ -59,7 +59,7 @@
                 <img id="base-img" class="img-responsive" style="width: 90%" src="renders/tlo001.jpg" alt="Glamour"/>
             </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 configurator-right">
             <div class="row margin-bottom-25">
                 <div class="text-center">
                     <p id="step-number" class="configurator-uppercase">Krok 1</p>
@@ -67,10 +67,10 @@
                     <!--<button id="skip-step" type="button" class="btn btn-link" onclick="configurator.skipStep()">Pomiń ten krok></button>-->
                 </div>
             </div>
-            <div class="row">
-                <div id="step-content" class="col-sm-12">
+            <div class="row owl-width">
+                    <div id="step-content" class="col-sm-12" >
 
-                </div>
+                    </div>
             </div>
             <div class="row" style="padding-top: 25px">
                 <div class="col-sm-6">
