Mobile fix part 2

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 </div>
             </div>
             <div class="row" style="padding-top: 25px">
-                <div class="col-sm-6">
+                <div class="col-xs-6 previous-step-div">
                     <button id="previous-step" type="button"
                             class="btn btn-sm btn-link blue-text bold configurator-uppercase"
                             onclick="configurator.previousStep()">wezgłowie
                     </button>
                 </div>
-                <div class="col-sm-6" style="text-align: right;">
+                <div class="col-xs-6 next-step-div">
                     <button id="next-step" type="button"
                             class="btn btn-sm btn-link blue-text bold configurator-uppercase"
                             onclick="configurator.nextStep()"></button>
