--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta name="description" content="Stwórz łóżko w swoim własnym stylu!" />
     <title>Konfigurator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" async></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" async></script>
@@ -34,7 +36,6 @@
     <link rel="stylesheet" type="text/css" href="style.min.css"/>
     <script src="https://dagrejs.github.io/project/graphlib/latest/graphlib.min.js"></script>
     <script src="configurator.js"></script>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 </head>
 <body>
 <div id="start-img">
