--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta name="description" content="Stwórz łóżko w swoim własnym stylu!" />
     <title>Konfigurator</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" async></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" async></script>
     <script src="https://hilding.pl/viewHilding/js/owl.carousel.js" async></script>
